Co-authored-by: Aleksandra Mira <s20383@pjwstk.edu.pl>
Created fragments from layouts, app_nav.xml as navigation graph.
MainActivity now contains NavHostFragment and displays created fragments.
Added condition that Register button works only when Agreed switch is enabled. Register.kt, SplashScreen.kt and Login.kt are fragment classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Garry prototype</string>
     <string name="register">Register</string>
     <string name="service_agreement">I agree to the terms of service</string>
-    <string name="sign_in">Sign in</string>
+    <string name="sign_in">Sign up</string>
     <string name="first_name_hint">First Name</string>
     <string name="last_name_hint">Last Name</string>
     <string name="email_hint">E-mail</string>
