--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="register_button_text">Create account</string>
     <string name="log_in">Log in</string>
     <string name="login_button_text">Log in</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="send">SEND</string>
+    <string name="forgot_password">Forgot password</string>
+    <string name="forgot_passwordq">Forgot password?</string>
 </resources>
