Added navigation drawer to LoggedInScreen Centered all layouts Created layouts for user drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="guest_text">Don\'t want to create an account?</string>
     <string name="guest_button">Click here</string>
     <string name="guest_appbar_text">Guest View</string>
+    <string name="user_appbar_text">User View</string>
 </resources>
