--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="paramedic_type">Type of support</string>
     <string name="paramedic_justification">Justification</string>
     <string name="paramedic_justi_hint">Enter justification</string>
+    <string name="paramedic_call_button_ambulance">Ambulance</string>
+    <string name="paramedic_call_button_fireStation">Fire truck</string>
+    <string name="paramedic_call_button_police">Police</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Paramedic_screen">Paramedic View</string>
