--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,11 @@
     <string name="see_nearby_emergency_services_facilities_near_you">See nearby emergency services facilities near you</string>
     <string name="interactive_map_will_show_you_nearby_hospitals_police_stations_and_fire_departments">Interactive map will show you nearby hospitals, police stations and fire departments</string>
     <string name="go_to_app">Go to app</string>
+    <string name="settings">Settings</string>
+    <string name="language">Language</string>
+    <string name="select_language">Select language</string>
+    <string name="notifications">Notifications</string>
+    <string name="create_incident">Create incident</string>
 
     <string-array name="filterTutorialsArray">
         <item>All Tutorials</item>
