Map on paramedic screen now works in a coroutine so it doesn't block UI Tablet views now have bigger buttons and text to make it more readable and usable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,10 @@
     <string name="cancel">Cancel</string>
     <string name="accept">Accept</string>
     <string name="login_toast">Email logged: </string>
+    <string name="UserNavigation_Settings">Settings</string>
+    <string name="new_password_confirm">Confirm new password</string>
+    <string name="paramedic_day_label">Day:</string>
+    <string name="paramedic_ambulance_shift_label">Ambulance shifts</string>
     <string-array name="filterTutorialsArray">
         <item>All Tutorials</item>
         <item>FILE_EMERGENCE</item>
