Editing, displaying and deleting allergies and diseases details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,7 @@
     <string name="disease">Diseases</string>
     <string name="bloodType">Blood type</string>
     <string name="rhType">Rh</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="update">Update</string>
 </resources>
