--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Garry</string>
+    <string name="app_name">Garry</string>
     <string name="register">Register</string>
     <string name="service_agreement">I agree to the terms of service</string>
     <string name="sign_up">Sign up</string>
     <string name="first_name_hint">First Name</string>
     <string name="last_name_hint">Last Name</string>
-    <string name="email_hint" translatable="false">E-mail</string>
+    <string name="email_hint">E-mail</string>
     <string name="password_hint">Password</string>
     <string name="birthday_hint">Your birth date</string>
     <string name="register_button_text">Create account</string>
