added polish language

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -68,7 +68,7 @@
     <string name="add">Dodaj informacje</string>
     <string name="yes">Tak</string>
     <string name="no">Nie</string>
-    <string name="call">Wezwij</string>
+    <string name="call">Zadzwoń</string>
     <string name="victim_description">Dodatkowy opis</string>
     <string name="allergy">Alergia</string>
     <string name="allergy_type">Typ alergii</string>
