Saving user info, remember if user/medic is logged in and go to their activity, Fixed layouts for polish

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -18,7 +18,7 @@
     <string name="guest_button">Click here</string>
     <string name="guest_appbar_text">Guest View</string>
     <string name="user_appbar_text">User View</string>
-    <string name="create_incident_text">Turn off creating incidents</string>
+    <string name="create_incident_text">Create incident</string>
     <string name="type_of_incident">Type</string>
     <string name="incident_localisation">Localisation</string>
     <string name="incident_description">Description</string>
@@ -108,7 +108,7 @@
     <string name="language">Language</string>
     <string name="select_language">Select language</string>
     <string name="notifications">Notifications</string>
-    <string name="create_incident">Create incident</string>
+    <string name="create_incident">Turn off creating incidents</string>
     <string name="barcode_scanning_cancelled" translatable="false">Scan was cancelled</string>
     <string name="barcode_scanning_successful">Scanned band code: </string>
     <string name="create_incident_popup_title">Create Incident?</string>
