--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="menu_victim">Victim</string>
     <string name="menu_support">Support</string>
     <string name="menu_equipment">Equipment</string>
-    <string name="ambulance_break">Ambulance Break</string>
+    <string name="ambulance_break">Break</string>
     <string name="break_type">Break type</string>
     <string name="start_time">Start time</string>
     <string name="end_time">End time</string>
@@ -162,4 +162,7 @@
     <string name="victim_info">Victim info</string>
     <string name="open_navigation">Navigation</string>
     <string name="birthday">Birth date</string>
+    <string name="ambulance">Ambulance</string>
+    <string name="options">Options</string>
+    <string name="breakText">Break Time</string>
 </resources>
