Displaying tutorials with html, rating tutorials, getting schedule for medic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <string name="tutorial_category">Tutorial category:</string>
     <string name="description">Description</string>
     <string name="victim_info">Victim info</string>
-    <string name="open_navigation">Navigation</string>
+    <string name="open_navigation">Navigate</string>
     <string name="birthday">Birth date</string>
     <string name="ambulance">Ambulance</string>
     <string name="options">Options</string>
