Working CSS adding to html code for tutorials

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="select">Select</string>
     <string name="choose">Choose</string>
     <string name="confirm">Confirm</string>
-    <string name="add">Add information</string>
+    <string name="add">Start break</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="call">Call</string>
