Displaying upcoming shift for medic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="ambulance">Ambulance</string>
     <string name="options">Options</string>
     <string name="breakText">Break Time</string>
+    <string name="nearest_shift">Shift:</string>
 </resources>
