--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,6 @@
     <string name="options">Options</string>
     <string name="breakText">Break Time</string>
     <string name="nearest_shift">Shift:</string>
+    <string name="break_explaining_text">When you start a break your ambulance shows up in dispatchers view as \"Currently on break\"</string>
+    <string name="end">Finish break</string>
 </resources>
