--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -75,6 +75,7 @@
         <item>Wziewna</item>
     </string-array>
     <string name="incident_scan">Skan</string>
+    <string name="startBreak">Rozpocznij przerwę</string>
     <string name="scan_prompt">Scan opaski poszkodowanego</string>
     <string name="choose_your_location">Dotknij aby wybrać lokalizacje zdarzenia</string>
     <string name="add_victim_info">Dodaj informacje o poszkodowanym</string>
