--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,9 @@
     <string name="select">Select</string>
     <string name="choose">Choose</string>
     <string name="confirm">Confirm</string>
-    <string name="add">Start break</string>
+    <string name="add">Add information</string>
     <string name="yes">Yes</string>
+    <string name="startBreak">Start Break</string>
     <string name="no">No</string>
     <string name="call">Call</string>
     <string name="victim_description">Additional description</string>
