--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -176,4 +176,6 @@
     <string name="ambulance">Ambulans</string>
     <string name="options">Opcje</string>
     <string name="breakText">Przerwa</string>
+    <string name="currentlyOnBreak">Currently on Break</string>
+    <string name="no_backup_type_selected">Please select at least one type of backup</string>
 </resources>
