--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,6 @@
     <string name="nearest_shift">Shift:</string>
     <string name="break_explaining_text">When you start a break your ambulance shows up in dispatchers view as \"Currently on break\"</string>
     <string name="end">Finish break</string>
+    <string name="currentlyOnBreak">Currently on Break</string>
+    <string name="no_backup_type_selected">Please select at least one type of backup</string>
 </resources>
