Finished Guest Screen side of the app

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -178,4 +178,7 @@
     <string name="break_explaining_text">When you start a break your ambulance shows up in dispatchers view as \"Currently on break\"</string>
     <string name="currentlyOnBreak">Currently on Break</string>
     <string name="no_backup_type_selected">Please select at least one type of backup</string>
+    <string name="cantRateTutorials">You can\'t rate tutorials as guest</string>
+    <string name="no_internet">Internet connection not available</string>
+    <string name="cantWatchTutorials">You can\'t watch tutorials as guest</string>
 </resources>
