--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,4 +188,5 @@
     <string name="cantWatchTutorials">You can\'t watch tutorials as guest</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password_not_matching">Passwords do not match</string>
 </resources>
