--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -182,4 +182,6 @@
     <string name="no_internet">Internet connection not available</string>
     <string name="cantWatchTutorials">You can\'t watch tutorials as guest</string>
     <string name="password_not_matching">Passwords do not match</string>
+    <string name="forgot_password_info">You will receive an email with token, input that token and a new password after clicking the send button</string>
+    <string name="password_changed">Your password has been changed</string>
 </resources>
