--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="password_not_matching">Passwords do not match</string>
+    <string name="forgot_password_info">You will receive an email with token, input that token and a new password after clicking the send button</string>
+    <string name="password_changed">Your password has been changed</string>
 </resources>
