--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -184,4 +184,5 @@
     <string name="password_not_matching">Passwords do not match</string>
     <string name="forgot_password_info">You will receive an email with token, input that token and a new password after clicking the send button</string>
     <string name="password_changed">Your password has been changed</string>
+    <string name="share_with_band_scanning">Share with band scanning?</string>
 </resources>
