--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,12 @@
     <string name="notBreathingVictim">Not breathing</string>
     <string name="conciousVictim">concious</string>
     <string name="unconciousVictim">unconcious</string>
+    <string name="menu_scan">Scan Bandcode</string>
+    <string name="scan_victim_bandcode">Scan Victim Bandcode</string>
+    <string name="scan_victim_bandcode_text">After scanning someone\'s bandcode the app will display his/her medical information</string>
+    <string name="call_for_backup_successful">Call for backup was successful</string>
+    <string name="no_shifts">Information about schedule not available</string>
+    <string name="no_emergency">You aren\'t assigned to an incident</string>
+    <string name="no_ambulance">You are not assigned to an ambulance</string>
+    <string name="ambulance_equipment_empty">Equipment list is empty</string>
 </resources>
